Fix "From" icon alignment on resource list.

--- a/src/components/Account/ResourceList/Resource/Cards/style.module.css
+++ b/src/components/Account/ResourceList/Resource/Cards/style.module.css
@@ -34,6 +34,10 @@
   font-weight: bold;
 }
 
+.mobileDetail img {
+  vertical-align: bottom;
+}
+
 @media screen and (min-width: 62em) {
   .cardHeader {
     grid-row: 1 / 4;
